[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/materials/wheel.material" type="Material" id=1]
[ext_resource path="res://scenes/Wheely.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=2]
size = Vector3( 4.5, 2, 10 )

[sub_resource type="CylinderMesh" id=1]
material = ExtResource( 1 )
height = 0.4
radial_segments = 32
rings = 2

[node name="Wheely" type="Spatial"]
script = ExtResource( 2 )

[node name="body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.53273, 1.90554, 3.98765 )
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="front_left_wheel" type="MeshInstance" parent="body"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -2.53273, -0.905538, -3.98765 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = null

[node name="front_right_wheel" type="MeshInstance" parent="body"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 2.46727, -0.905538, -3.98765 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = null

[node name="rear_left_wheel" type="MeshInstance" parent="body"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -2.53273, -0.905538, 4.01235 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = null

[node name="rear_right_wheel" type="MeshInstance" parent="body"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 2.46727, -0.905538, 4.01235 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = null
